<resources>
    <string name="app_name">MAD Mini Project</string>
    <string name="Increment_button">+</string>
    <string name="decrement_button">-</string>
    <string name="Display_total">LKR 230,000.00</string>
    <string name="dropdown_category">Select Category</string>
    <string name="dropdown_product">Select Product</string>
    <string name="Add_button">ADD ITEM</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="create_button">+  Create Your Quotation</string>
    <string name="delete_button">DELETE</string>
    <string name="checkout_button">CHECK OUT</string>
    <string name="change_Qname">My Quotation 1</string>
    <string name="home_name">NITROTECH</string>
    <string name="home_text">C O M P U T E R</string>
    <string name="home_text2">S O L U T I O N S</string>
    <string name="home_laptop">LAPTOPS</string>
    <string name="home_pcparts">PARTS</string>
    <string name="home_build">BUILD PC</string>
    <string name="home_profile">PROFILE</string>
    <string name="laptop_manage">Laptop Management</string>
    <string name="spare_part">Spare Part Management</string>
    <string name="pc_build">PC Build Orders</string>
    <string name="add">ADD</string>
    <string name="edit_button">Manage</string>
    <string name="orders_button">ORDERS</string>
    <string name="view_order_button">VIEW ORDER</string>
    <string name="view_button">VIEW</string>
    <string name="user_name">Name Of the Client</string>
    <string name="complete_botton">COMPLETE</string>
    <string name="username_bildOredr">Chamath123 Build Order</string>
    <string name="address">Address :</string>
    <string name="Phone_num">Phone No :</string>
    <string name="Amount">Amount :</string>
    <string name="get_payment_button">GET PAYMENT SLIP</string>
    <string name="down_quotation">DOWNLOAD QUOTATION</string>
    <string name="pay_btn">PURCHASE</string>
    <string name="view_btn">VIEW</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">NAME</string>
    <string name="date_edit">On : xx/xx/xxxx</string>
    <string name="download">Download</string>
    <string name="order_date">Date : </string>
    <string name="order_text">s\' Build Request</string>
    <string name="slip">Payment Slip</string>
    <string name="q_items">Quotation Items</string>
    <string name="add_image">Add Image</string>
    <string name="add_spare_part">Add Spare Part</string>
    <string name="update_spare_part">Update Spare Part</string>
    <string name="delete_spare_part">Delete Spare Part</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="add_cart">Add to cart</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="description">Description</string>


    <string name="myPartId">My Part</string>
    <string name="editTextTextEmailAddressid">Email Address</string>
    <string name="editTextTextPasswordId">Password</string>
    <string name="buttonSignUpId">Sign Up</string>
    <string name="textViewSignInId">Sign In</string>
    <string name="buttonLoginId">Sign In</string>
    <string name="textView2SignInId">Sign Up</string>
    <string name="buttonEditProfile">Edit Profile</string>
    <string name="buttonWishList">Wish List</string>
    <string name="buttonAddressBook">Address Book</string>
    <string name="textViewAddressId">Enter your address here</string>
    <string name="textViewContactNumberId">Enter your contact number here</string>
    <string name="editTextTextMultiLineAddress">Address</string>
    <string name="editTextPhoneContact">Contact number...</string>
    <string name="buttonAddressBookContact">Save</string>
    <string name="textViewConfirmChange">Enter your new password here...</string>
    <string name="buttonUpdatePasswordId">Update</string>
    <string name="button2DeleteAccount">Delete Account</string>
    <string name="editTextTextPersonName">Name</string>
    <string name="textViewCheckOutBtn">CheckOut</string>
    <string name="textView7PaymentId">Payment</string>
    <string name="textView8AccountNumberId">Account Number</string>
    <string name="textView10AccountNum">000458500452</string>
    <string name="textView12Branch">Malabe</string>
    <string name="buttonAttachImageId">Attach</string>
    <string name="textView16InterfaceId">Payment Interface under \"NitroTech Ltd.\"</string>
    <string name="button2ConfimPaymentId">confirm</string>
    <string name="buttonAdmin">Admin</string>
    <string name="quan">Qty :</string>


    <string name="Brandproj">Enter Brand Name</string>
    <string name="brandkk">Enter Brand Name</string>
    <string name="savebut">Save</string>
    <string name="pricekk">Enter Your price</string>
    <string name="ssdl">SSD</string>
    <string name="hdd">HDD</string>
    <string name="ramm">RAM</string>
    <string name="process">Processer</string>
    <string name="Brand_name">Brand Name</string>
    <string name="otherr">Other</string>
    <string name="but1">Save</string>
    <string name="uploadd">Upload images</string>
    <string name="discardf">discard</string>
    <string name="add_a_new_laptop">Add a new laptop</string>
    <string name="VGAa">VGA</string>
    <string name="deletee">Delete</string>
    <string name="msi_i7_10th_gen_gaming">MSI i7 10th Gen Gaming</string>
    <string name="lkr_275_000">LKR 275,000</string>
    <string name="acer_i5_3rd_gen">Acer i5 3rd GEN</string>
    <string name="lkr_45_000">LKR 45,000</string>
</resources>
