<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_Black"
    tools:context=".it20122614.PaymentActivity">

    <TextView
        android:id="@+id/textView7PaymentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/textView7PaymentId"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="352dp"
        android:layout_height="165dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7PaymentId">

        <TextView
            android:id="@+id/textView8AccountNumberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/textView8AccountNumberId"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10AccountNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="60dp"
            android:text="@string/textView10AccountNum"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView11BranchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:text="Branch"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12Branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:layout_marginTop="90dp"
            android:text="@string/textView12Branch"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView15InstructionForPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:text="Payment to NItroTech made in Cash should be paid to the following Boc Bank Account"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView16InterfaceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="130dp"
            android:text="@string/textView16InterfaceId"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView13AttachImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:text="Attach your image here"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14Instruction" />

    <Button
        android:id="@+id/buttonAttachImageId"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/buttonAttachImageId"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13AttachImage"
        app:layout_constraintTop_toBottomOf="@+id/textView14Instruction" />

    <TextView
        android:id="@+id/textView14Instruction"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:text="You have to upload your bank slip to confirm payment"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

    <Button
        android:id="@+id/button2ConfimPaymentId"
        android:layout_width="247dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:text="@string/button2ConfimPaymentId"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13AttachImage" />
</androidx.constraintlayout.widget.ConstraintLayout>